<resources>
    <string name="app_name">Memo</string>
    <string name="kor_delete_memo">메모 삭제</string>
    <string name="kor_edit_memo">메모 편집</string>
    <string name="kor_create_memo">새 메모 작성</string>
    <string name="kor_save">저장</string>
    <string name="kor_insert_photo">사진 첨부</string>
    <string name="kor_edit_photo">사진 편집</string>

    <string name="kor_title">제목</string>
    <string name="kor_content">내용</string>
    <string name="kor_edit">편집</string>
    <string name="kor_delete">삭제</string>
</resources>
