<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_memo"
        android:icon="@drawable/baseline_done_black_18dp"
        android:title="@string/kor_save"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_insert_photo"
        android:icon="@drawable/baseline_insert_photo_black_18dp"
        android:title="@string/kor_insert_photo"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_photo"
        android:title="@string/kor_edit_photo"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_memo"
        android:icon="@drawable/baseline_edit_black_18dp"
        android:title="@string/kor_edit_memo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_memo"
        android:icon="@drawable/baseline_delete_black_18dp"
        android:title="@string/kor_delete_memo"
        app:showAsAction="never" />
</menu>
